--- a/style.css
+++ b/style.css
@@ -141,10 +141,36 @@ i {
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
+.final-score {
+    position: absolute;
+    width: 190px;
+    left: 50%;
+    top: 525px;
+    transform: translateX(-50%);
+    padding: 10px;
+    color: #555;
+    border: 1px solid red;
+    font-family: Lato;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.final-score:focus { outline: none; }
+
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 140px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+#dice-2 {
+    position: absolute;
+    left: 50%;
+    top: 250px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
